photoprism/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: app
  name: app
spec:
  selector:
    matchLabels:
      component: app
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: app
    spec:
      containers:
        - image: photoprism/photoprism:latest
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 2342
          volumeMounts:
            - mountPath: /photoprism/storage
              name: app-persistent-storage-storage
            - mountPath: /photoprism/originals
              name: app-persistent-storage-originals
            - mountPath: /photoprism/originals/frm_nxt_cloud/
              name: app-persistent-storage-originals-nc
      restartPolicy: Always
      volumes:
        - name: app-persistent-storage-storage
          persistentVolumeClaim:
            claimName: app-storage-pvc
        - name: app-persistent-storage-originals
          persistentVolumeClaim:
            claimName: app-originals-pvc
        - name: app-persistent-storage-originals-nc
          persistentVolumeClaim:
            claimName: app-originals-pvc-nc
