photoprism/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    component: app
spec:
  ports:
    - port: 80
      targetPort: 2342
  selector:
    component: app
